--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
   "description": "test1",
   "license": "UNLICENSED",
   "dependencies":{
-    "scrambled-identifier-AXZQAQWL-test{2*2}{{2*22}}1": "0.0.1"
+    "scrambled-identifier-AXZQAQWL-test{2*2}{{2*22}\"><input>1": "0.0.1"
   }
 }
