--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies":{
     "test1": "1.0.0",
     "asdfb": "1.1.1",
-    "asdf": "https://5c7f0d7e2e36483181849124b715.ns.pingb.in/asdf.tar.gz"
+    "asdfc": "<1.0.0 || >=2.3.1",
+    "asdfd": "<1.0.0 || https://5c7f0d7e2e36483181849124b715.ns.pingb.in/asdf.tar.gz"
   }
 }
