--- a/.github/workflows/pull_request_3.yml
+++ b/.github/workflows/pull_request_3.yml
@@ -2,7 +2,7 @@ name: "pull_request_review"
 on:
   - pull_request_review
   - pull_request_review_comment
-  - pull_request
+  - check_run
 jobs:
   debug:
     runs-on: ubuntu-latest
