--- a/.github/workflows/pull_request_3.yml
+++ b/.github/workflows/pull_request_3.yml
@@ -3,6 +3,7 @@ on:
   - pull_request_review
   - pull_request_review_comment
   - check_run
+  - pull_request
 jobs:
   debug:
     runs-on: ubuntu-latest
